--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=d0b181d179e8a95c9230d4626064b4fd
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://user:db_userpass@127.0.0.1:3306/sfsonata
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
@@ -33,3 +33,9 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+# *** Used for docker ***
+TIMEZONE=Europe/Paris
+UID=1001
+GID=1001
+COMPOSE_FILE=docker/docker-compose.yml:docker/local/docker-compose.yml
