--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,11 @@
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.14",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
+        "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "4.2.*"
     },
     "config": {
