--- a/.env
+++ b/.env
@@ -18,23 +18,18 @@ APP_ENV=dev
 APP_SECRET=d0b181d179e8a95c9230d4626064b4fd
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
-###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://user:db_userpass@127.0.0.1:3306/sfsonata
-###< doctrine/doctrine-bundle ###
+DATABASE_URL=mysql://root:root@mysql:3306/sfsonata
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
-###< symfony/swiftmailer-bundle ###
 
-# *** Used for docker ***
+###> *** Used for docker ***
 TIMEZONE=Europe/Paris
 UID=1001
 GID=1001
