--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
+        "sonata-project/admin-bundle": "^3.45",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.8",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
@@ -27,7 +29,9 @@
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
+        "doctrine/data-fixtures": "^1.3",
         "friendsofphp/php-cs-fixer": "^2.14",
+        "hautelook/alice-bundle": "^2.3",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
