--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,21 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # Admin
+    app.admin.project:
+        class: App\Admin\ProjectAdmin
+        arguments:
+            - ~
+            - 'App\Entity\Project'
+            - ~
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Project }
+
+    app.admin.author:
+        class: App\Admin\AuthorAdmin
+        arguments:
+            - ~
+            - 'App\Entity\Author'
+            - ~
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Author }
