--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.45",
         "sonata-project/doctrine-orm-admin-bundle": "^3.8",
+        "sonata-project/user-bundle": "^4.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
