--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -15,6 +15,7 @@ return PhpCsFixer\Config::create()
         'no_empty_phpdoc' => true,
         'no_trailing_whitespace' => true,
         'phpdoc_inline_tag' => true,
+        'no_unused_imports' => true,
     ])
     ->setUsingCache(false) // Enable by the default
     ->setFinder($finder)
