--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.45",
+        "sonata-project/datagrid-bundle": "^2.5",
         "sonata-project/doctrine-orm-admin-bundle": "^3.8",
+        "sonata-project/page-bundle": "^3.10",
         "sonata-project/user-bundle": "^4.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.2.*",
