--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -1,5 +1,5 @@
 sonata_admin:
-    title: 'w'
+    title: 'tunnel'
     title_logo: 100-logo.png
     options:
         html5_validate: false
@@ -8,10 +8,32 @@ sonata_admin:
             - { type: sonata.admin.block.admin_list, position: left }
         groups:
             content:
-                label:           Business
-                label_catalogue: App
+                label:           admin.menu.business
+                label_catalogue: admin
                 icon:            '<i class="fa fa-th"></i>'
                 items:
                     - app.admin.author
                     - app.admin.project
                 roles: [ROLE_ADMIN, ROLE_SONATA_ADMIN]
+
+            sitebuilder:
+                label:          Site Builder
+                label_catalogue: admin
+                icon:            '<i class="fa fa-puzzle-piece"></i>'
+                items:
+                    - sonata.page.admin.page
+                roles: [ROLE_ADMIN, ROLE_SONATA_ADMIN]
+
+            sonata.admin.group.administration:
+                label:           sonata_administration
+                label_catalogue: SonataAdminBundle
+                icon:            '<i class="fa fa-cogs"></i>'
+                items:
+                    - sonata.page.admin.site
+                roles: [ROLE_ADMIN, ROLE_SONATA_ADMIN]
+
+    assets:
+        extra_javascripts:
+            - bundles/sonatapage/sonata-page.back.min.js
+        extra_stylesheets:
+            - bundles/sonatapage/sonata-page.back.min.css
