--- a/config/packages/sonata_block.yaml
+++ b/config/packages/sonata_block.yaml
@@ -1,4 +1,8 @@
 sonata_block:
+    context_manager: sonata.page.block.context_manager
+    default_contexts: [sonata_page_bundle]
     blocks:
         sonata.admin.block.admin_list:
             contexts: [admin]
+        app.block.service.text:
+
