--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    sonata.page.admin.page.class: App\Admin\Sonata\PageAdmin
 
 services:
     # default configuration for services in *this* file
@@ -29,21 +30,31 @@ services:
         class: App\Admin\ProjectAdmin
         arguments:
             - ~
-            - 'App\Entity\Project'
+            - App\Entity\Project
             - ~
         tags:
-            - { name: sonata.admin, manager_type: orm, label: Project }
+            - { name: sonata.admin, manager_type: orm, label: admin.project }
 
     app.admin.author:
         class: App\Admin\AuthorAdmin
         arguments:
             - ~
-            - 'App\Entity\Author'
+            - App\Entity\Author
             - ~
         tags:
-            - { name: sonata.admin, manager_type: orm, label: Author }
+            - { name: sonata.admin, manager_type: orm, label: admin.author }
 
     # Manager
     App\Manager\AuthorManager:
         arguments:
-            $class: 'App\Entity\Author'
+            $class: App\Entity\Author
+
+    # BLock
+    app.block.service.text:
+        class: App\Block\TextBlockService
+        arguments:
+            - block.text
+        tags:
+            - { name: sonata.block}
+
+
