add infra directory

--- a/.env
+++ b/.env
@@ -14,14 +14,6 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=d0b181d179e8a95c9230d4626064b4fd
-#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
-#TRUSTED_HOSTS='^localhost|example\.com$'
-
-###> doctrine/doctrine-bundle ###
-# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-DATABASE_URL=mysql://root:root@mysql:3306/sfsonata
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
@@ -29,8 +21,22 @@ DATABASE_URL=mysql://root:root@mysql:3306/sfsonata
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 
-###> *** Used for docker ***
+
+APP_ENV=dev
+
+APP_SECRET=d0b181d179e8a95c9230d4626064b4fd
+
+#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+
+#TRUSTED_HOSTS='^localhost|example\.com$'
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+
+DATABASE_URL=mysql://user:userpass@mysql:3306/mydb
+
+# *** Used for docker ***
 TIMEZONE=Europe/Paris
 UID=1001
 GID=1001
-COMPOSE_FILE=docker/docker-compose.yml:docker/local/docker-compose.yml
+COMPOSE_FILE=infra/docker-compose.yml:infra/docker/docker-compose.yml
