--- a/infra/node/Dockerfile
+++ b/infra/node/Dockerfile
@@ -1,4 +1,8 @@
 FROM node:8
 
-RUN npm install --global gulp-cli
+ARG UID=1000
+ARG GID=1000
 
+RUN npm install yarn --global \
+    && usermod -u $UID www-data \
+    && groupmod -g $GID www-data \
