--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
@@ -36,6 +36,7 @@
         "doctrine/data-fixtures": "^1.3",
         "friendsofphp/php-cs-fixer": "^2.14",
         "hautelook/alice-bundle": "^2.3",
+        "phpunit/phpunit": "^7",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
